fix: navbar on mobile

--- a/src/Components/LandingPage/landingPage.css
+++ b/src/Components/LandingPage/landingPage.css
@@ -2,8 +2,6 @@
     color: white;
     line-height: 75px;
     background-color: rgba(0, 0, 0, 0.521);
-    margin-top: 80px;
-
   }
 
   .typist h1{
@@ -14,4 +12,8 @@
     font-size: 32px;
     margin: 40px;
     font-size: 3em;
+  }
+
+  .typingText{
+    margin-top: 80px;
   }
